# coel_samples

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/toolchain/: clang-x86_64-windows-msvc.cmake
cmake/toolchain/utils/: common-cl.cmake
examples/: CMakeLists.txt
examples/0_assets/gonza/: gonza.gltf
examples/1_getting_started/1_window/1_simple/: main.cpp
examples/1_getting_started/1_window/2_clear/gl/: main.cpp
examples/1_getting_started/1_window/2_clear/vk/: main.cpp
examples/1_getting_started/2_drawing/0_common/: model.hpp  render.hpp
examples/1_getting_started/2_drawing/0_common/scenes/: all.hpp  gonza.hpp  spinning_cube.hpp  triangle.hpp
examples/1_getting_started/2_drawing/1_simple_triangle/: 0_common.hpp
examples/1_getting_started/2_drawing/1_simple_triangle/gl/: main.cpp
examples/1_getting_started/2_drawing/1_simple_triangle/vk/: main.cpp
examples/1_getting_started/2_drawing/2_textured_quad/0_common/: data.hpp
examples/1_getting_started/2_drawing/2_textured_quad/gl/: main.cpp
examples/1_getting_started/2_drawing/2_textured_quad/vk/: main.cpp
examples/1_getting_started/2_drawing/3_shaders/: 0_common.hpp  main.cpp
examples/1_getting_started/2_drawing/3_shaders/agnostic/: main.cpp
examples/misc/cuiui/: context.hpp  main.cpp  render_element.hpp  window.hpp
examples/misc/cuiui/ui/: button.hpp  checkbox.hpp  coloredit.hpp  shapes.hpp  slider.hpp
examples/misc/docking/: main.cpp
examples/misc/glvk/: app_common.hpp  main.cpp  opengl.hpp  vulkan.hpp
examples/misc/raw_win32/: main.cpp
examples/misc/voxels/: main.cpp  math.hpp
